# OSDev

./: .gitignore  CMakeLists.txt  To-Do.txt  linker.ld  os.img  run.sh  run2.sh  run3.sh  runTest.sh
Bootloader/: bootloader.asm
Kernel/: TestPrograms.c  TestPrograms.h  fat.c  idt.c  irq.asm  kernel.asm  kernel_entry.c  pic.c
Kernel/InlineAssembly/: inline.h
Kernel/drivers/: disk.c  disk.h  keyboard.c  keyboard.h
Kernel/interruptHandler/: handlers.c
Kernel/interruptHandlers/: handlers.c
Kernel/sched/: scheduler.c  scheduler.h  task_struct.c  task_struct.h
Kernel/setup/: idt.c  idt.h  pic.c  pic.h
Kernel/std/: memcmp.c  memcmp.h  stdFunctions.c  stdFunctions.h
